// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composer string is correctly translated to DOM Multi-line formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
  </p>
  <p>
    <span
      style="color: #eb6d00;"
    >
      A1: 
    </span>
  </p>
  <p>
    <span
      style="color: #eb6d00;"
    >
      A2
    </span>
  </p>
  <p>
    <span />
  </p>
  <p>
    <span
      style="color: #3da4ab;"
    >
      +
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
      SUM
    </span>
    <span
      class="highlight-parenthesis-flag"
      style="color: light-dark(#000000, #ffffff);"
    >
      (
    </span>
  </p>
  <p>
    <span
      style="color: #02c39a;"
    >
      5
    </span>
    <span
      class="highlight-parenthesis-flag"
      style="color: light-dark(#000000, #ffffff);"
    >
      )
    </span>
  </p>
</div>
`;

exports[`Composer string is correctly translated to DOM Multi-line string 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span />
  </p>
  <p>
    <span>
      I'm
    </span>
  </p>
  <p>
    <span>
      multi
    </span>
  </p>
  <p>
    <span />
  </p>
  <p>
    <span>
      line
    </span>
  </p>
  <p>
    <span>
      <br />
    </span>
  </p>
</div>
`;

exports[`Composer string is correctly translated to DOM Selection indicator in multi-line formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
  </p>
  <p>
    <span />
  </p>
  <p>
    <span
      class="selector-flag"
      style="color: light-dark(#000000, #ffffff);"
    />
  </p>
</div>
`;

exports[`Composer string is correctly translated to DOM Selection indicator in simple formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span
      class="selector-flag"
      style="color: #3da4ab;"
    >
      =
    </span>
  </p>
</div>
`;

exports[`Composer string is correctly translated to DOM Simple formula 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span
      style="color: #3da4ab;"
    >
      =
    </span>
    <span
      style="color: #02c39a;"
    >
      1
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
       
    </span>
    <span
      style="color: #3da4ab;"
    >
      +
    </span>
    <span
      style="color: light-dark(#000000, #ffffff);"
    >
       
    </span>
    <span
      style="color: #eb6d00;"
    >
      A1
    </span>
  </p>
</div>
`;

exports[`Composer string is correctly translated to DOM Simple string 1`] = `
<div
  class="o-composer w-100 text-start active"
  contenteditable="plaintext-only"
  inputmode="text"
  spellcheck="false"
  style=""
  tabindex="1"
>
  <p>
    <span>
      I'm a simple content
    </span>
  </p>
</div>
`;
